Added det(A) calculation via Sarrus
Implemented det(A) calculation via Sarrus Method

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="efe">
         <a class="operation-card" href="transpose.html">Transpose of Matrix</a>
-        <a class="operation-card" href="under_construction.html">det(A) of a Matrix</a>
+        <a class="operation-card" href="determinant.html">det(A) of a Matrix (via Sarrus)</a>
         <a class="operation-card" href="under_construction.html">Inverse of Matrix</a>
     </div>
 
