--- a/transpose.html
+++ b/transpose.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <div class="input-area">
-        <h1>Input Matrix</h1>
+        <h1>Transpose of a Matrix</h1>
         <div class="table-container" id="display">
         
         </div>
