--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 
     <div class="efe">
         <a class="operation-card" href="transpose.html">Transpose of Matrix</a>
+        <a class="operation-card" href="const_mult.html">Matrix Multiplication (by constant)</a>
+        <a class="operation-card" href="under_construction.html">Matrix Multiplication (by matrix)</a>
         <a class="operation-card" href="determinant.html">det(A) of a Matrix (via Sarrus)</a>
+        <a class="operation-card" href="under_construction.html">Cofactor Matrix</a>
         <a class="operation-card" href="under_construction.html">Inverse of Matrix</a>
     </div>
 
