4x4 cofactor/minor implementation
Implemented and uploaded the 4x4 cofactor and minor matrix calculation.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <a class="operation-card" href="const_mult.html">Matrix Multiplication (by constant)</a>
         <a class="operation-card" href="under_construction.html">Matrix Multiplication (by matrix)</a>
         <a class="operation-card" href="determinant.html">det(A) of a Matrix (via Sarrus)</a>
-        <a class="operation-card" href="under_construction.html">Cofactor Matrix</a>
+        <a class="operation-card" href="under_construction.html">det(A) of a Matrix (via Cofactors)</a>
+        <a class="operation-card" href="cofactor.html">Cofactor Matrix</a>
+        <a class="operation-card" href="minors.html">Minor Matrix</a>
         <a class="operation-card" href="under_construction.html">Inverse of Matrix</a>
     </div>
 
