--- a/cofactor.html
+++ b/cofactor.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="table.css">
     <link rel="stylesheet" href="cofactor.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
